--- a/Simulator/OpenGL/CMakeLists.txt
+++ b/Simulator/OpenGL/CMakeLists.txt
@@ -27,11 +27,21 @@ set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 
 FetchContent_MakeAvailable(glfw)
 
+# ---- GLM ----
+FetchContent_Declare(
+    glm
+    GIT_REPOSITORY https://github.com/g-truc/glm
+    GIT_TAG 1.0.2
+)
+
+FetchContent_MakeAvailable(glm)
+
 add_library(OpenGLEngine INTERFACE)
 
 target_link_libraries(OpenGLEngine INTERFACE
     glad
     glfw
+    glm
     OpenGL::GL
 )
 
